[repair cors filter]